--- a/src/main/resources/local/bloc-service-local.yml
+++ b/src/main/resources/local/bloc-service-local.yml
@@ -12,3 +12,10 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: 8050
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    instance:
+      prefer-ip-address: true
