--- a/src/main/resources/local/gateway-service-local.yml
+++ b/src/main/resources/local/gateway-service-local.yml
@@ -31,6 +31,12 @@ spring:
           uri: lb:http://UNIVERSITE-SERVICE
           predicates:
             - Path=/api/v1/universites/**
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    instance:
+      prefer-ip-address: true
 
 
 
