--- a/src/main/resources/local/reservation-service-local.yml
+++ b/src/main/resources/local/reservation-service-local.yml
@@ -14,6 +14,12 @@ spring:
 
 server:
   port: 8054
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    instance:
+      prefer-ip-address: true
 application:
   config:
     etudiant-url: http://localhost:8099/api/v1/etudiant
