--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,15 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://172.19.132.87:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://172.19.132.87:8081/repository/maven-releases/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
