--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -3,8 +3,6 @@ kind: Service
 metadata:
   name: myapp-service
   namespace: myapp
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
   selector:
     app: myapp
@@ -12,4 +10,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: NodePort  # Use NodePort if using Kind, or LoadBalancer for cloud environments
