--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -13,18 +13,27 @@ spec:
       labels:
         app: myapp
     spec:
+      serviceAccountName: default
       containers:
         - name: myapp
           image: lookabj/myapp:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           readinessProbe:
             tcpSocket:
               port: 8080
-            initialDelaySeconds: 5
+            initialDelaySeconds: 15
             periodSeconds: 10
           livenessProbe:
             tcpSocket:
               port: 8080
-            initialDelaySeconds: 10
+            initialDelaySeconds: 20
             periodSeconds: 10
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
