--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: NodePort  # Use NodePort if using Kind, or LoadBalancer for cloud environments
+  type: NodePort
