--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: myapp-deployment
   namespace: myapp
+  labels:
+    app: myapp
 spec:
   replicas: 2
   selector:
@@ -13,20 +15,24 @@ spec:
       labels:
         app: myapp
     spec:
-      serviceAccountName: default
       containers:
         - name: myapp
           image: lookabj/myapp:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          readinessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 10
-          livenessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 20
-            periodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp-service
+  namespace: myapp
+spec:
+  selector:
+    app: myapp
+  ports:
+    - protocol: TCP
+      port: 8080  # The port that the service will expose
+      targetPort: 8080  # The port that the application listens on
+      nodePort: 30007  # Optional: specify a port number in the range 30000-32767
+  type: NodePort
