--- a/src/main/resources/local/chambre-service-local.yml
+++ b/src/main/resources/local/chambre-service-local.yml
@@ -16,8 +16,6 @@ server:
   port: 8051
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      prefer-ip-address: true
+    enabled: false
+
 
