--- a/src/main/resources/local/etudiant-service-local.yml
+++ b/src/main/resources/local/etudiant-service-local.yml
@@ -16,7 +16,5 @@ server:
   port: 8052
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      prefer-ip-address: true
+    enabled: false
+
