--- a/src/main/resources/local/gateway-service-local.yml
+++ b/src/main/resources/local/gateway-service-local.yml
@@ -33,10 +33,8 @@ spring:
             - Path=/api/v1/universites/**
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      prefer-ip-address: true
+    enabled: false
+
 
 
 
