--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,20 +37,28 @@ pipeline {
         }
 
 
-        stage('SonarQube Analysis') {
-            steps {
-                script {
-                    withSonarQubeEnv('sonar') {
-                        sh '''
-                            $SCANNER_HOME/bin/sonar-scanner \
-                            -Dsonar.projectName=reservation-service \
-                            -Dsonar.projectKey=reservation-service \
-                            -Dsonar.java.binaries=.
-                        '''
+            stage('Generate JaCoCo Report') {
+                        steps {
+                            sh "mvn jacoco:report"
+                        }
+                    }
+
+
+
+                stage('SonarQube Analysis') {
+                    steps {
+                        script {
+                            withSonarQubeEnv('sonar') {
+                                sh '''
+                                    $SCANNER_HOME/bin/sonar-scanner \
+                                    -Dsonar.projectName=reservation-service \
+                                    -Dsonar.projectKey=reservation-service
+                                '''
+                            }
+                        }
                     }
                 }
-            }
-        }
+
 
         stage('Quality Gate') {
             steps {
