--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -1,15 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: myapp
-
-
 # MySQL Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
-  namespace: myapp
 spec:
   selector:
     matchLabels:
@@ -38,7 +31,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
-  namespace: myapp
 spec:
   ports:
   - port: 3306
@@ -50,7 +42,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: foyerapp
-  namespace: myapp
 spec:
   replicas: 1
   selector:
@@ -78,10 +69,9 @@ spec:
 ---
 # Foyer Application Service
 apiVersion: v1
-kind: Service
+kind: ServiceAccount
 metadata:
   name: foyerapp-service
-  namespace: myapp
 spec:
   type: NodePort
   ports:
