--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,19 +9,13 @@ pipeline {
         SCANNER_HOME = tool 'sonar-scanner'
     }
 
-
     stages {
-       
-       
-
 
         stage('Clean') {
             steps {
-                sh "mvn clean "
+                sh "mvn clean"
             }
         }
-
-
 
         stage('Compile') {
             steps {
@@ -38,7 +32,7 @@ pipeline {
         stage('Publish To Nexus') {
             steps {
                 withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                     sh 'mvn deploy -Dspring.profiles.active=local '
+                    sh "mvn deploy -Dspring.profiles.active=local"
                 }
             }
         }
@@ -65,19 +59,66 @@ pipeline {
 
         stage('Deploy To Kubernetes') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
                     sh "kubectl apply -f discovery-service-dep.yml"
-
                 }
             }
         }
 
         stage('Verify the Deployment') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
                     sh "kubectl get pods -n devops-project"
                     sh "kubectl get svc -n devops-project"
                 }
+            }
+        }
+    }
+
+    post {
+        always {
+            script {
+                def jobName = env.JOB_NAME
+                def buildNumber = env.BUILD_NUMBER
+                def pipelineStatus = currentBuild.result ?: 'UNKNOWN'
+                def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
+
+                def body = """
+                    <html>
+                    <body>
+                    <div style="border: 4px solid ${bannerColor}; padding: 10px;">
+                        <h2>${jobName} - Build ${buildNumber}</h2>
+                        <div style="background-color: ${bannerColor}; padding: 10px;">
+                            <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
+                        </div>
+                        <p>Check the <a href="${BUILD_URL}">console output</a>.</p>
+                    </div>
+                    </body>
+                    </html>
+                """
+
+                emailext (
+                    subject: "${jobName} - Build ${buildNumber} - ${pipelineStatus.toUpperCase()}",
+                    body: body,
+                    to: 'sami.ouerfelli@pm.me',
+                    from: 'jenkins@server.com',
+                    replyTo: 'jenkins@server.com',
+                    mimeType: 'text/html'
+                )
             }
         }
     }
