--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,20 +9,15 @@ pipeline {
         SCANNER_HOME = tool 'sonar-scanner'
     }
 
-
     stages {
-       
-     
 
-       stage('Clean') {
-           steps {
-               sh "mvn clean "
-           }
-       }
+        stage('Clean') {
+            steps {
+                sh "mvn clean"
+            }
+        }
 
-       
-
-           stage('Setup DB') {
+        stage('Setup DB') {
             steps {
                 script {
                     sh 'docker-compose up -d'
@@ -35,36 +30,32 @@ pipeline {
                 sh "mvn compile"
             }
         }
+
         stage('Test') {
             steps {
                 sh "mvn test -Dspring.profiles.active=local"
             }
         }
+
         stage('Generate JaCoCo Report') {
-                    steps {
-                        sh "mvn jacoco:report"
-                    }
-                }
+            steps {
+                sh "mvn jacoco:report"
+            }
+        }
 
-
-
-            stage('SonarQube Analysis') {
-                steps {
-                    script {
-                        withSonarQubeEnv('sonar') {
-                            sh '''
-                                $SCANNER_HOME/bin/sonar-scanner \
-                                -Dsonar.projectName=universite-service \
-                                -Dsonar.projectKey=universite-service
-                            '''
-                        }
+        stage('SonarQube Analysis') {
+            steps {
+                script {
+                    withSonarQubeEnv('sonar') {
+                        sh '''
+                            $SCANNER_HOME/bin/sonar-scanner \
+                            -Dsonar.projectName=universite-service \
+                            -Dsonar.projectKey=universite-service
+                        '''
                     }
                 }
             }
-
-
-
-
+        }
 
         stage('Quality Gate') {
             steps {
@@ -76,14 +67,14 @@ pipeline {
 
         stage('Build') {
             steps {
-                sh "mvn package -Dspring.profiles.active=local "
+                sh "mvn package -Dspring.profiles.active=local"
             }
         }
 
         stage('Publish To Nexus') {
             steps {
                 withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                    sh "mvn deploy -Dspring.profiles.active=local "
+                    sh "mvn deploy -Dspring.profiles.active=local"
                 }
             }
         }
@@ -110,25 +101,67 @@ pipeline {
 
         stage('Deploy To Kubernetes') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
                     sh "kubectl apply -f universite-dep.yml"
-
                 }
             }
         }
 
         stage('Verify the Deployment') {
             steps {
-                withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: 'devops-k8s-cluster',
+                    contextName: 'devops-k8s-cluster',
+                    credentialsId: 'k8-cred',
+                    namespace: 'devops-project',
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
                     sh "kubectl get pods -n devops-project"
                     sh "kubectl get svc -n devops-project"
                 }
             }
         }
     }
-     post {
-            always {
-                jacoco(execPattern: 'target/jacoco.exec')
+
+    post {
+        always {
+            script {
+                def jobName = env.JOB_NAME
+                def buildNumber = env.BUILD_NUMBER
+                def pipelineStatus = currentBuild.result ?: 'UNKNOWN'
+                def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
+
+                def body = """
+                    <html>
+                    <body>
+                    <div style="border: 4px solid ${bannerColor}; padding: 10px;">
+                        <h2>${jobName} - Build ${buildNumber}</h2>
+                        <div style="background-color: ${bannerColor}; padding: 10px;">
+                            <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
+                        </div>
+                        <p>Check the <a href="${BUILD_URL}">console output</a>.</p>
+                    </div>
+                    </body>
+                    </html>
+                """
+
+                emailext (
+                    subject: "${jobName} - Build ${buildNumber} - ${pipelineStatus.toUpperCase()}",
+                    body: body,
+                    to: 'sami.ouerfelli@pm.me',
+                    from: 'jenkins@server.com',
+                    replyTo: 'jenkins@server.com',
+                    mimeType: 'text/html'
+                )
             }
         }
+    }
 }
